# picture-frame

./: .gitignore
curator/: Cargo.toml
curator/src/: main.rs
pi/: .bash_profile  .xsession
picture-frame/app/: README.md
picture-frame/orc/: Cargo.toml
picture-frame/orc/src/: main.rs
picture-frame/pi/: .xsession
picture-frame/web-server/src/: main.rs
picture-frame/web-ui/: package-lock.json
picture-frame/web-ui/src/: App.tsx  api.ts
web/: Cargo.toml  build.rs  frame-web.service
web-server/: Cargo.toml
web-server/src/: main.rs
web/server/: Cargo.toml
web/server/src/: main.rs
web/src/: main.rs
web/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/ui/src/: App.tsx  api.ts
